--- a/docker.yml
+++ b/docker.yml
@@ -95,7 +95,7 @@ services:
     postgres:
         hostname: mypostgres
         container_name: postgres_container
-        user: postgres
+        user: 1000:1000
         image: 'postgres:latest'
         environment:
             POSTGRES_USER: 'postgres'
