--- a/docker.yml
+++ b/docker.yml
@@ -99,7 +99,7 @@ services:
     postgres:
         hostname: mypostgres
         container_name: postgres_container
-        image: postgres:12-alpine
+        image: postgres:14-bullseye
         environment:
             POSTGRES_USER: 'postgres'
             POSTGRES_PASSWORD: 'postgres'
