--- a/docker.yml
+++ b/docker.yml
@@ -108,26 +108,44 @@ services:
 
     # relational database
     postgres:
-        hostname: mypostgres
-        container_name: postgres_container
         image: 'postgres:14-bullseye'
-        user: 'postgres'
         environment:
-            POSTGRES_USER: 'postgres'
-            POSTGRES_PASSWORD: 'postgres'
-            PGDATA: /data/postgres
+          POSTGRES_USER: airflow
+          POSTGRES_PASSWORD: airflow
+          POSTGRES_DB: airflow
         volumes:
-            - postgres:/data/postgres
+          - postgres-db-volume:/var/lib/postgresql/data
         ports:
-            - "5432:5432"
-        networks:
-            - dataworld
-        restart: on-failure
+          - 5432:5432
         healthcheck:
-            test: ["CMD", "pg_isready"]
-            interval: 30s
-            timeout: 20s
-            retries: 3
+          test: ["CMD", "pg_isready", "-U", "airflow"]
+          interval: 5s
+          retries: 5
+        restart: always
+
+    # postgres:
+    #     hostname: mypostgres
+    #     container_name: postgres_container
+    #     image: 'postgres:14-bullseye'
+    #     user: 'postgres'
+    #     environment:
+    #         POSTGRES_USER: 'postgres'
+    #         POSTGRES_PASSWORD: 'postgres'
+    #         PGDATA: /data/postgres
+    #     volumes:
+    #         - postgres:/data/postgres
+    #     ports:
+    #         - "5432:5432"
+    #     networks:
+    #         - dataworld
+    #     restart: on-failure
+    #     healthcheck:
+    #         test: ["CMD", "pg_isready"]
+    #         interval: 30s
+    #         timeout: 20s
+    #         retries: 3
+
+    
     # database administration tool
     pgadmin:
         hostname: mypgadmin
