--- a/docker.yml
+++ b/docker.yml
@@ -117,6 +117,8 @@ services:
           - postgres-db-volume:/var/lib/postgresql/data
         ports:
           - 5432:5432
+        networks:
+            - dataworld
         healthcheck:
           test: ["CMD", "pg_isready", "-U", "airflow"]
           interval: 5s
@@ -197,8 +199,9 @@ volumes:
     nifi-provenance_repository:
     nifi-state:
     nifi-conf:
-    postgres:
+    # postgres:
     pgadmin:
+    postgres-db-volume:
 
 networks:
     dataworld:
